Template-Compiler/python-part/src/antlr/pyParser.java
// Generated from C:/‏‏‏‏مترجمات/‏‏‏‏untitled1 - نسخة - نسخة/Template-Compiler/python-part/grammar/pyParser.g4 by ANTLR 4.13.2

package antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class pyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INDENT=1, DEDENT=2, FROM=3, IMPORT=4, DEF=5, RETURN=6, IF=7, ELIF=8, ELSE=9, 
		FOR=10, WHILE=11, IN=12, IS=13, NOT=14, AND=15, OR=16, BREAK=17, NONE=18, 
		TRUE=19, FALSE=20, POWASSIGN=21, POW=22, MULASSIGN=23, DIVASSIGN=24, MODASSIGN=25, 
		PLUSASSIGN=26, MINUSASSIGN=27, EQEQ=28, NEQ=29, GE=30, LE=31, GT=32, LT=33, 
		STAR=34, DIV=35, MOD=36, PLUS=37, MINUS=38, ASSIGN=39, AT=40, COMMA=41, 
		COLON=42, DOT=43, LPAREN=44, RPAREN=45, LBRACK=46, RBRACK=47, LBRACE=48, 
		RBRACE=49, StringLiteral=50, NumberLiteral=51, Identifier=52, CCOMMENT=53, 
		MULTILINE_COMMENT=54, NEWLINE=55, WS=56;
	public static final int
		RULE_program = 0, RULE_topLevel = 1, RULE_importStmt = 2, RULE_dottedName = 3, 
		RULE_importList = 4, RULE_decorator = 5, RULE_functionDef = 6, RULE_paramList = 7, 
		RULE_argList = 8, RULE_argument = 9, RULE_block = 10, RULE_statement = 11, 
		RULE_assignTarget = 12, RULE_assignment = 13, RULE_returnStmt = 14, RULE_ifStmt = 15, 
		RULE_forStmt = 16, RULE_whileStmt = 17, RULE_expr = 18, RULE_listExpr = 19, 
		RULE_dictExpr = 20, RULE_dictItem = 21, RULE_literal = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "topLevel", "importStmt", "dottedName", "importList", "decorator", 
			"functionDef", "paramList", "argList", "argument", "block", "statement", 
			"assignTarget", "assignment", "returnStmt", "ifStmt", "forStmt", "whileStmt", 
			"expr", "listExpr", "dictExpr", "dictItem", "literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'from'", "'import'", "'def'", "'return'", "'if'", 
			"'elif'", "'else'", "'for'", "'while'", "'in'", "'is'", "'not'", "'and'", 
			"'or'", "'break'", "'None'", "'True'", "'False'", "'**='", "'**'", "'*='", 
			"'/='", "'%='", "'+='", "'-='", "'=='", "'!='", "'>='", "'<='", "'>'", 
			"'<'", "'*'", "'/'", "'%'", "'+'", "'-'", "'='", "'@'", "','", "':'", 
			"'.'", "'('", "')'", "'['", "']'", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INDENT", "DEDENT", "FROM", "IMPORT", "DEF", "RETURN", "IF", "ELIF", 
			"ELSE", "FOR", "WHILE", "IN", "IS", "NOT", "AND", "OR", "BREAK", "NONE", 
			"TRUE", "FALSE", "POWASSIGN", "POW", "MULASSIGN", "DIVASSIGN", "MODASSIGN", 
			"PLUSASSIGN", "MINUSASSIGN", "EQEQ", "NEQ", "GE", "LE", "GT", "LT", "STAR", 
			"DIV", "MOD", "PLUS", "MINUS", "ASSIGN", "AT", "COMMA", "COLON", "DOT", 
			"LPAREN", "RPAREN", "LBRACK", "RBRACK", "LBRACE", "RBRACE", "StringLiteral", 
			"NumberLiteral", "Identifier", "CCOMMENT", "MULTILINE_COMMENT", "NEWLINE", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "pyParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public pyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	 
		public ProgramContext() { }
		public void copyFrom(ProgramContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ProgramRuleContext extends ProgramContext {
		public TerminalNode EOF() { return getToken(pyParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(pyParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(pyParser.NEWLINE, i);
		}
		public List<TopLevelContext> topLevel() {
			return getRuleContexts(TopLevelContext.class);
		}
		public TopLevelContext topLevel(int i) {
			return getRuleContext(TopLevelContext.class,i);
		}
		public ProgramRuleContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).enterProgramRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).exitProgramRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyParserVisitor ) return ((pyParserVisitor<? extends T>)visitor).visitProgramRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			_localctx = new ProgramRuleContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 44281044104269048L) != 0)) {
				{
				setState(48);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case NEWLINE:
					{
					setState(46);
					match(NEWLINE);
					}
					break;
				case FROM:
				case IMPORT:
				case DEF:
				case RETURN:
				case IF:
				case FOR:
				case WHILE:
				case NOT:
				case BREAK:
				case NONE:
				case TRUE:
				case FALSE:
				case PLUS:
				case MINUS:
				case AT:
				case LPAREN:
				case LBRACK:
				case LBRACE:
				case StringLiteral:
				case NumberLiteral:
				case Identifier:
					{
					setState(47);
					topLevel();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(52);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(53);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TopLevelContext extends ParserRuleContext {
		public TopLevelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevel; }
	 
		public TopLevelContext() { }
		public void copyFrom(TopLevelContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TopFunctionContext extends TopLevelContext {
		public FunctionDefContext functionDef() {
			return getRuleContext(FunctionDefContext.class,0);
		}
		public TopFunctionContext(TopLevelContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).enterTopFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).exitTopFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyParserVisitor ) return ((pyParserVisitor<? extends T>)visitor).visitTopFunction(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TopStatementContext extends TopLevelContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TopStatementContext(TopLevelContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).enterTopStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).exitTopStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyParserVisitor ) return ((pyParserVisitor<? extends T>)visitor).visitTopStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TopDecoratedFunctionContext extends TopLevelContext {
		public FunctionDefContext functionDef() {
			return getRuleContext(FunctionDefContext.class,0);
		}
		public List<DecoratorContext> decorator() {
			return getRuleContexts(DecoratorContext.class);
		}
		public DecoratorContext decorator(int i) {
			return getRuleContext(DecoratorContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(pyParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(pyParser.NEWLINE, i);
		}
		public TopDecoratedFunctionContext(TopLevelContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).enterTopDecoratedFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).exitTopDecoratedFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyParserVisitor ) return ((pyParserVisitor<? extends T>)visitor).visitTopDecoratedFunction(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TopImportContext extends TopLevelContext {
		public ImportStmtContext importStmt() {
			return getRuleContext(ImportStmtContext.class,0);
		}
		public TopImportContext(TopLevelContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).enterTopImport(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).exitTopImport(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyParserVisitor ) return ((pyParserVisitor<? extends T>)visitor).visitTopImport(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopLevelContext topLevel() throws RecognitionException {
		TopLevelContext _localctx = new TopLevelContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_topLevel);
		int _la;
		try {
			setState(71);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FROM:
			case IMPORT:
				_localctx = new TopImportContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(55);
				importStmt();
				}
				break;
			case AT:
				_localctx = new TopDecoratedFunctionContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(57); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(56);
					decorator();
					}
					}
					setState(59); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==AT );
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(61);
					match(NEWLINE);
					}
					}
					setState(66);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(67);
				functionDef();
				}
				break;
			case DEF:
				_localctx = new TopFunctionContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(69);
				functionDef();
				}
				break;
			case RETURN:
			case IF:
			case FOR:
			case WHILE:
			case NOT:
			case BREAK:
			case NONE:
			case TRUE:
			case FALSE:
			case PLUS:
			case MINUS:
			case LPAREN:
			case LBRACK:
			case LBRACE:
			case StringLiteral:
			case NumberLiteral:
			case Identifier:
				_localctx = new TopStatementContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(70);
				statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStmtContext extends ParserRuleContext {
		public ImportStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStmt; }
	 
		public ImportStmtContext() { }
		public void copyFrom(ImportStmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FromImportContext extends ImportStmtContext {
		public TerminalNode FROM() { return getToken(pyParser.FROM, 0); }
		public TerminalNode Identifier() { return getToken(pyParser.Identifier, 0); }
		public TerminalNode IMPORT() { return getToken(pyParser.IMPORT, 0); }
		public ImportListContext importList() {
			return getRuleContext(ImportListContext.class,0);
		}
		public FromImportContext(ImportStmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).enterFromImport(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).exitFromImport(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyParserVisitor ) return ((pyParserVisitor<? extends T>)visitor).visitFromImport(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SimpleImportContext extends ImportStmtContext {
		public TerminalNode IMPORT() { return getToken(pyParser.IMPORT, 0); }
		public DottedNameContext dottedName() {
			return getRuleContext(DottedNameContext.class,0);
		}
		public SimpleImportContext(ImportStmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).enterSimpleImport(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).exitSimpleImport(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyParserVisitor ) return ((pyParserVisitor<? extends T>)visitor).visitSimpleImport(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStmtContext importStmt() throws RecognitionException {
		ImportStmtContext _localctx = new ImportStmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importStmt);
		try {
			setState(79);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FROM:
				_localctx = new FromImportContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				match(FROM);
				setState(74);
				match(Identifier);
				setState(75);
				match(IMPORT);
				setState(76);
				importList();
				}
				break;
			case IMPORT:
				_localctx = new SimpleImportContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				match(IMPORT);
				setState(78);
				dottedName();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DottedNameContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(pyParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(pyParser.Identifier, i);
		}
		public List<TerminalNode> DOT() { return getTokens(pyParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(pyParser.DOT, i);
		}
		public DottedNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dottedName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).enterDottedName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).exitDottedName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyParserVisitor ) return ((pyParserVisitor<? extends T>)visitor).visitDottedName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DottedNameContext dottedName() throws RecognitionException {
		DottedNameContext _localctx = new DottedNameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_dottedName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(Identifier);
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(82);
				match(DOT);
				setState(83);
				match(Identifier);
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportListContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(pyParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(pyParser.Identifier, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(pyParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(pyParser.COMMA, i);
		}
		public ImportListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).enterImportList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).exitImportList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyParserVisitor ) return ((pyParserVisitor<? extends T>)visitor).visitImportList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportListContext importList() throws RecognitionException {
		ImportListContext _localctx = new ImportListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_importList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(Identifier);
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(90);
				match(COMMA);
				setState(91);
				match(Identifier);
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DecoratorContext extends ParserRuleContext {
		public TerminalNode AT() { return getToken(pyParser.AT, 0); }
		public DottedNameContext dottedName() {
			return getRuleContext(DottedNameContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(pyParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(pyParser.RPAREN, 0); }
		public ArgListContext argList() {
			return getRuleContext(ArgListContext.class,0);
		}
		public DecoratorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decorator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).enterDecorator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).exitDecorator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyParserVisitor ) return ((pyParserVisitor<? extends T>)visitor).visitDecorator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecoratorContext decorator() throws RecognitionException {
		DecoratorContext _localctx = new DecoratorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_decorator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(AT);
			setState(98);
			dottedName();
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(99);
				match(LPAREN);
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8251147573542912L) != 0)) {
					{
					setState(100);
					argList();
					}
				}

				setState(103);
				match(RPAREN);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDefContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(pyParser.DEF, 0); }
		public TerminalNode Identifier() { return getToken(pyParser.Identifier, 0); }
		public TerminalNode LPAREN() { return getToken(pyParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(pyParser.RPAREN, 0); }
		public TerminalNode COLON() { return getToken(pyParser.COLON, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public FunctionDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).enterFunctionDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pyParserListener ) ((pyParserListener)listener).exitFunctionDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pyParserVisitor ) return ((pyParserVisitor<? extends T>)visitor).visitFunctionDef(this);
			else return visitor.visitChildren(this);
		}
	}
